# mmdew-change-detector

./: README.md  pyproject.toml
notebooks/: 00_plot_f1.ipynb  00_plot_f1_copy.ipynb  01_plot_pcd_mtd.ipynb  02_plot_runtime.ipynb  03_mmdew_arl.ipynb  03_prepare_arl.ipynb  04_mmdew_edd.ipynb  04_prepare_edd.ipynb  05_plot_edd+arl.ipynb  07_plot_edd+arl.ipynb  07_prepare-arl-results.ipynb  07_prepare-mtd-results.ipynb  08_kernel-cusum_thresholds.ipynb  08_scanb_thresholds.ipynb  09_mmdew-arl-vs-edd.ipynb  09_mmdew-thresholds_d=20.ipynb  10_okcusum-arl-vs-edd.ipynb  11_newma-arl-vs-edd.ipynb  11_plot_arl-vs-edd.ipynb  11_scanb-arl-vs-edd.ipynb  12_focus_algorithm.ipynb  13_newma_thresholds.ipynb  15_statistics_univariate-mmd.ipynb  15_statistics_univariate-mmdew.ipynb  16_statistics_univariate-focus.ipynb  17_plot_univariate.ipynb  data.py  demo-kcusum.ipynb  dists.py  post_process_R.ipynb
src/: R_experiments.R  arl_experiments.py  base.py  mtd_experiments.py  run_experiment.py  run_experiments_arl.py  run_experiments_edd.py  run_experiments_f1_score.py  run_experiments_runtime.py
src/experiments/: competitors.py  data.py  metrics.py  mmdew_adapter.py  newma_adapter.py  scanb_adapter.py  unify_results.py
src/mmdew/: bucket_stream2.py  detectors.py  fast_rbf_kernel.py  mmdew.py
src/skmultiflow/: base.py  base_stream.py  data_stream.py
src/skmultiflow/drift_detection/: base_drift_detector.py
