[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mmdew"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "mmdew"
version = "0.0.1"
authors = [
  { name="Anonymous Authors", email="anonymous@anonymous.com" },
]
description = "Code for the article MMDEW"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]